[gd_scene load_steps=2 format=3 uid="uid://upgrade_panel_uid"]

[ext_resource type="Script" path="res://scenes/ui/UpgradePanel.gd" id="1_upgrade"]

[node name="UpgradePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_upgrade")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Upgrades"
horizontal_alignment = 1

[node name="CurrencyDisplay" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TabContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="KitchenTab" type="Button" parent="TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kitchen Upgrades"

[node name="BuildingsTab" type="Button" parent="TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buildings"

[node name="SubMenuContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="KitchenUpgrades" type="ScrollContainer" parent="SubMenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="KitchenUpgradeContainer" type="VBoxContainer" parent="SubMenuContainer/KitchenUpgrades"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buildings" type="ScrollContainer" parent="SubMenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="BuildingContainer" type="VBoxContainer" parent="SubMenuContainer/Buildings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Back" 